@@ -1,3 +1,9 @@
+2011-12-20 Jesse Kornblum
+
+	* md5deep/files.c: Modified find_bsd_hash to deal with improperly 
+	  copied hashes. 
+
+	
 2011-09-29 Jesse Kornblum
 
 	* match.c: Fixed wacky typo in memset
